--- a/public/css/scss/_global.scss
+++ b/public/css/scss/_global.scss
@@ -1,207 +1,6 @@
-// COLORS
-$light-grey: #DFE0E3;
-$grey: #949494;
-
-$beige: #E2DFDF;
-
-$green: #27bac1;
-$dark-green: #135d60;
-
-$white: #ffffff;
-$black: #231F20;
-
-$primary-color: #777777;
-
-// OTHER VARIABLES
-
-// MIXINS
-// @mixin font-size($sizeValue: 1.6, $line: $sizeValue * 1.3){
-//   font-size: ($sizeValue * 1) + px;
-//   line-height: ($line * 1) + px;
-//   font-size: ($sizeValue / 10) + rem;
-//   line-height: ($line / 10) + rem;
-// }
-
-@mixin anti-alias { //FIXES ANTI-ALIASING ON WEBKIT
-  -webkit-font-smooth: always !important;
-  -ms-font-smooth: always !important;
-  -moz-font-smooth: always !important;
-  -o-font-smooth: always !important;
-  font-smooth: always !important;
-  text-rendering: optimizeLegibility !important;
-  -webkit-font-smoothing: antialiased !important;
-  font-smoothing: antialiased !important;
-}
-
-@mixin respond-to($media) {
-  @if $media == xsmall {
-    @media only screen and (min-width: 450px){ @content; }
-  }
-  @if $media == popup_small {
-    @media only screen and (min-width: 500px){ @content; }
-  }
-  @if $media == small {
-    @media only screen and (min-width: 700px){ @content; }
-  }
-  @else if $media == medium {
-    @media only screen and (min-width: 890px){ @content; } // ORIGINAL 850 - CHANGED FOR IPAD
-  }
-  @else if $media == large {
-    @media only screen and (min-width: 1100px){ @content; } // ORIGINAL 950 - CHANGED FOR IPAD
-  }
-}
-
-@mixin vendor-prefix($name, $argument) {
-  -webkit-#{$name}: #{$argument};
-  -ms-#{$name}: #{$argument};
-  -moz-#{$name}: #{$argument};
-  -o-#{$name}: #{$argument};
-  #{$name}: #{$argument};
-}
-
-@mixin clear-float {
-  &:before, &:after {
-    content: "\0020";
-    display: block;
-    height: 0;
-    overflow: hidden;
-  }
-  &:after{
-    clear: both;
-  }
-}
-
-@mixin hide-text {
-  color: transparent;
-  text-shadow: none;
-  text-indent: -999999px;
-}
-
-/*  commenting this out because we got rid of compass on July 1st
-@mixin animate-object {
-  @include transition-duration(.3s);
-}
-*/
-
-/* added by kevin july1st */
-@mixin transition-duration($duration) {
-  -webkit-transition: all $duration ease;
-     -moz-transition: all $duration ease;
-       -o-transition: all $duration ease;
-      -ms-transition: all $duration ease;
-          transition: all $duration ease;
-
-}
-
-@mixin aspect-ratio($width, $height) { // aspect-ratio(16, 9);
-  position: relative;
-  &:before {
-    display: block;
-    content: "";
-    width: 100%;
-    padding-top: ($height / $width) * 100%;
-  }
-  > .content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-}
-
-@mixin selection {
-  ::-moz-selection { @content; }
-  ::selection { @content; }
-}
-
-// IMAGES
-$sprite: url("../img/sprite.svg");
-$sprite-fallback: url('../img/sprite.png');
-$sprite-size: 400px 560px;
-
-@mixin sprite-hover($idle-x, $position-y, $hover-x) {
-  background-image: $sprite;
-  background-size: $sprite-size !important;
-  background-position: $idle-x $position-y;
-  background-repeat: no-repeat;
-  @include transition-duration(0);
-  .no-svg & {
-    background-image: $sprite-fallback;
-  }
-  &:hover {
-    background-position: $hover-x $position-y;
-  }
-}
-
-@mixin img-content($img-x, $img-y) {
-  content: ' ';
-  background-image: $sprite;
-  background-size: $sprite-size !important;
-  background-position: $img-x $img-y;
-  background-repeat: no-repeat;
-  @include hide-text;
-  .no-svg & {
-    background-image: $sprite-fallback;
-  }
-}
-
-// FLEXBOX http://css-tricks.com/snippets/css/a-guide-to-flexbox/
-@mixin flexbox() {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-
-@mixin flex-flow($values) {
-  -webkit-box-flex-flow: $values;
-  -moz-box-flex-flow:  $values;
-  -webkit-flex-flow:  $values;
-  -ms-flex-flow:  $values;
-  flex-flow:  $values;
-}
-
-@mixin flex($values) { // (flex-grow flex-shrink flex-basis)
-  -webkit-box-flex: $values;
-  -moz-box-flex:  $values;
-  -webkit-flex:  $values;
-  -ms-flex:  $values;
-  flex:  $values;
-}
-
-@mixin order($val) {
-  -webkit-box-ordinal-group: $val;
-  -moz-box-ordinal-group: $val;
-  -ms-flex-order: $val;
-  -webkit-order: $val;
-  order: $val;
-}
-
-// OTHER STYLES
+$default-font: Comic Sans, Comic Sans MS, cursive;
+$primary-color: blue;
+$background-color: red;
 
 
-body {
-  @include selection {
-    background-color: $grey;
-    color: $white;
-  }
-}
-
-.videoWrapper {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
-  height: 0;
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-:focus {
-  outline: -webkit-focus-ring-color auto 0px;
-}
+body { background-color: $background-color }
