--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -1,7 +1,6 @@
 
-// CSS Settings
+// CSS Settings, these cascade
 @import "global";
 
 // Now you can split your scss however you want
 @import "typography";
-@import "buttons";
