--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,6 @@
-//- layout.pug
 html
   head
     title #{title}
-    link(rel='stylesheet' href='/css/frameri.css')
-    link(rel='stylesheet', href='/css/frameri.css')
+    link(rel='stylesheet', href='/css/styles.css')
   body
     block content
-    block foot
-      #footer
-        p some footer content
